--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -18,7 +18,7 @@
         width: 100%;
         height: 100%;
         background-size: cover;
-        background-position:top center;
+        background-position:center center;
         transition: transform 0.2s cubic-bezier(0.39, 0.58, 0.57, 1);
     }
     .overlay{
