--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -228,10 +228,11 @@
         }
     }
     .fashion-container{
+        --grid-gap: 15px;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-areas: "left" "rightTop" "rightBottom";
-        gap: 15px;
+        gap: var(--grid-gap);
 
         @media (min-width: 576px) {
             grid-template-columns: 1fr 1fr;
@@ -239,27 +240,12 @@
         }
         
         @media (min-width: 768px) {
-            grid-template-areas: "left rightTop" "left rightBottom";
-            gap: 35px;
+            grid-template-columns: 2fr 1fr 1fr;
+            grid-template-areas: "left rightTop rightTopRight" "left rightBottom rightBottomRight";
+            --grid-gap: 35px;
         }
 
-        .left-fashion{
-            grid-area: left;
-            min-height: 280px;
-
-            .slides {
-                .slide {
-                    .slide-main {
-                        @include fashion_image_section;
-
-                        .fontlayer {
-                            bottom: 30px;
-                            right: 15px;
-                        }
-                    }
-                }
-            }
-
+        .fashion {
             .tns-outer {
                 position: relative;
 
@@ -299,6 +285,32 @@
                     }
                 }
             }
+
+            .slides {
+                .slide {
+                    .slide-main {
+                        @include fashion_image_section;
+                    }
+                }
+            }
+        }
+
+        .left-fashion{
+            grid-area: left;
+
+            .slides {
+                .slide {
+                    .slide-main {
+                        height: calc(560px + var(--grid-gap));
+
+                        .fontlayer {
+                            bottom: 30px;
+                            right: 15px;
+                        }
+                    }
+                }
+            }
+
             a{
                 color: #fff;
                 text-decoration: none;
@@ -313,40 +325,12 @@
         }
 
         .right-top-fashion{
-            // background-color: aqua;
-            // min-height: 280px;
-            // grid-area: rightTop;
-            // @include fashion_image_section('../images/fashion2.jpg');
-            
-            // .fontlayer{
-            //     top: 0;
-            //     left: 0;
-            //     width: 100%;
-            //     height: 100%;
-
-            //     .fashion-heading{
-            //         padding:84px 10px;
-            //         padding-bottom: 0;
-            //     }
-            //     .fashion-text{
-            //         padding-left: 10px;
-            //     }
-            // }
-            // a{
-            //     color: #fff;
-            //     text-decoration: none;
-            //     text-align: left;
-            //     width: 100%;
-            //     display: block;
-            //     padding-left: 13px;
-            // }
             grid-area: rightTop;
-            min-height: 280px;
 
-            .slides2 {
+            .slides {
                 .slide {
                     .slide-main {
-                        @include fashion_image_section;
+                        height: 280px;
 
                         .fontlayer {
                             bottom: 30px;
@@ -356,45 +340,6 @@
                 }
             }
 
-            .tns-outer {
-                position: relative;
-
-                .tns-nav {
-                    position: absolute;
-                    left: 50%;
-                    bottom: 10px;
-                    transform: translateX(-50%);
-                    text-align: center;
-                    z-index: 5;
-
-                    button {
-                        background: transparent;
-                        border: 1px solid #fff;
-                        box-shadow: none;
-                        outline: none;
-                        padding: 5px;
-                        margin: 0 3px;
-                        border-radius: 50%;
-                        transition: all 0.12s ease-in-out;
-
-                        &:first-child {
-                            margin-left: 0;
-                        }
-
-                        &:last-child {
-                            margin-right: 0;
-                        }
-
-                        &.tns-nav-active {
-                            background: #fff;
-                        }
-
-                        &:hover {
-                            opacity: 0.8;
-                        }
-                    }
-                }
-            }
             a{
                 color: #fff;
                 text-decoration: none;
@@ -408,33 +353,12 @@
             }
         }
         .right-bottom-fashion{
-            // min-height: 280px;
-            // grid-area: rightBottom;
-            // @include fashion_image_section('../images/fashion3.jpg');
-
-            // .fontlayer{
-            //     top: 0;
-            //     left: 0;
-            //     width: 100%;
-            //     height: 100%;
-
-            //     .fashion-heading{
-            //         padding:84px 10px;
-            //         padding-bottom: 0;
-            //     }
-            //     .fashion-text{
-            //         padding-left: 10px;
-            //     }
-              
-            // }
-
             grid-area: rightBottom;
-            min-height: 280px;
 
-            .slides3 {
+            .slides {
                 .slide {
                     .slide-main {
-                        @include fashion_image_section;
+                        height: 280px;
 
                         .fontlayer {
                             bottom: 30px;
@@ -444,45 +368,6 @@
                 }
             }
 
-            .tns-outer {
-                position: relative;
-
-                .tns-nav {
-                    position: absolute;
-                    left: 50%;
-                    bottom: 10px;
-                    transform: translateX(-50%);
-                    text-align: center;
-                    z-index: 5;
-
-                    button {
-                        background: transparent;
-                        border: 1px solid #fff;
-                        box-shadow: none;
-                        outline: none;
-                        padding: 5px;
-                        margin: 0 3px;
-                        border-radius: 50%;
-                        transition: all 0.12s ease-in-out;
-
-                        &:first-child {
-                            margin-left: 0;
-                        }
-
-                        &:last-child {
-                            margin-right: 0;
-                        }
-
-                        &.tns-nav-active {
-                            background: #fff;
-                        }
-
-                        &:hover {
-                            opacity: 0.8;
-                        }
-                    }
-                }
-            }
             a{
                 color: #fff;
                 text-decoration: none;
@@ -493,6 +378,30 @@
                     vertical-align: middle;
                 }
                 
+            }
+        }
+
+        .right-top-right-fashion {
+            grid-area: rightTopRight;
+            
+            .slides {
+                .slide {
+                    .slide-main {
+                        height: 280px;
+                    }
+                }
+            }
+        }
+
+        .right-bottom-right-fashion {
+            grid-area: rightBottomRight;
+
+            .slides {
+                .slide {
+                    .slide-main {
+                        height: 280px;
+                    }
+                }
             }
         }
     }
