--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -116,19 +116,25 @@
     
 }
 .top-bar{
-    .top-bar-text{
-        font-size: 0.8em;
-        text-align: center;
-        font-family: $primary-font;
-        font-weight: 800;
-        background-color: change-color($color: #020202,  $alpha: 0.49);
-        color: #fffffe;
-        text-transform: uppercase;
-        padding: 20px 0;
-        margin: 0;
-        backdrop-filter: blur(23px);
-        @media (min-width:768px) {
-            font-size: 1em;
+    font-size: 0.8em;
+    text-align: center;
+    font-family: $primary-font;
+    font-weight: 600;
+    background-color:#000000;
+    color: #fffffe;
+    text-transform: uppercase;
+    padding: 15px 0;
+    margin: 0;
+    backdrop-filter: blur(23px);
+    @media (min-width:768px) {
+        font-size: 1em;
+    } 
+    .slides{
+        .slide{
+            .top-bar-text{
+                margin: 0;
+                padding: 0;
+            }
         }
     }
 }
