--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -39,7 +39,7 @@
                     align-items: center; 
                     height:512px;
                 .hero-text{ 
-                    // padding: 253px 0;
+                    padding: 100px 0;
                     padding-bottom: 0;
                     text-align: center;
                     @media (min-width: 992px) {
