fontlayer width added

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -306,6 +306,7 @@
                         .fontlayer {
                             bottom: 30px;
                             right: 15px;
+                            width: 40%;
                         }
                     }
                 }
