--- a/src/scss/_discount_popup.scss
+++ b/src/scss/_discount_popup.scss
@@ -29,7 +29,10 @@
 
         .image-side {
             width: 30%;
-
+            display: none;
+            @media (min-width: 768px) {
+                display: block;
+            }
             img {
                 width: 100%;
                 height: 100%;
