--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -47,9 +47,8 @@
                         text-align: left;
                     }
                     p{
-                    // padding-left: 185px;
+                    font-family: 'Dancing Script', cursive;
                     font-weight: 300;
-                    font-style: italic;
                     color: #ffffff;
                     font-size: 2em;
                         @media (min-width: 992px) {
@@ -79,7 +78,7 @@
                     .link-text{
                         width: 100%;
                         text-align: center;
-                        // padding-top: 36px;
+                        margin-top: 290px;
                         a{
                             color: #fff;
                             font-size: 2em;
