--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -37,7 +37,10 @@
             background-position: top center;
                 .slide-main{
                     align-items: center; 
-                    height:512px;
+                    height:360px;
+                    @media (min-width:576px){
+                        height:512px;
+                    }
                 .hero-text{ 
                     padding: 100px 0;
                     padding-bottom: 0;
@@ -49,11 +52,11 @@
                     p{
                     font-family: 'Dancing Script', cursive;
                     font-weight: 300;
-                    color: #ffffff;
-                    font-size: 2em;
+                    color: #EFA605;
+                    font-size: 1.7em;
                         @media (min-width: 992px) {
                             padding-left: 185px;
-                            font-size: 3em;
+                            font-size: 2.5em;
                         }
                     }
                     .hero-heading{
@@ -78,10 +81,13 @@
                     .link-text{
                         width: 100%;
                         text-align: center;
-                        margin-top: 290px;
+                        margin-top: 100px;
+                        @media (min-width:576px){
+                            margin-top: 290px;
+                        }
                         a{
-                            color: #fff;
-                            font-size: 2em;
+                            color: #D79200;
+                            font-size: 1.5em;
                             text-decoration: none;
                             font-weight: 400;
                             i{
